partman (10) UNRELEASED; urgency=low

  * Translations:

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 13 Feb 2004 09:53:47 +0200

partman (9) unstable; urgency=low

  * Stephen R. Marenka
    - Add userdevfs (kernel 2.2.x) support.
  * Denis Barbier
    - Because of a bug in po-debconf, generated templates file is
      corrupted if a comment appears before the Template line, as
      before the partman/active_partition template.  Closes: #232489

  * Translations:
    - Bartosz Fenski
      - Updated Polish (pl) translation.
    - Bart Cornelis
      - Updated Dutch (nl.po) translation
    - Nikolai Prokoschenko
      - Updated Russian (ru.po) translation
    - Konstantinos Margaritis
      - Updated Greek translation (el.po)
    - Christian Perrier
      - Update french translation (fr.po)
    - Dennis Stampfer
      - Update German translation (de.po)
    - Carlos Z.F. Liu
      - update Simplified Chinese translation (zh_CN.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Miguel Figueiredo
      - Update Portuguese translation (pt.po)
    - Claus Hindsgaul
      - Updated Danish translation (da.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese (pt_BR) translation.
    - Jordi Mallach
      - Add Catalan translation (ca.po).
    - h3li0s
      - added Albanian translation (sq.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po).
    - Safir Secerovic
      - Update Bosnian translation (bs.po).
    - Eugen Meshcheryakov
      - added Ukrainian translation (uk.po)
    - Anders Lundgren
      - Initial Swedish translation (sv.po)

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 13 Feb 2004 09:53:16 +0200

partman (8) unstable; urgency=low

  * Updated translations:
    - Peter Mann
      - Update Slovak translation
    - Miguel Figueiredo
      - Add Portuguese translation (pt.po)
    - Safir Secerovic
      - Update Bosnian translation (bs.po).
  * Anton Zinoviev