@@ -3,12 +3,12 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Anton Zinoviev <zinoviev@debian.org>
-Build-Depends: debhelper (>= 4.1.13), po-debconf (>= 0.5.0), libparted1.6-dev
+Build-Depends: debhelper (>= 4.1.13), po-debconf (>= 0.5.0), libparted1.6-dev, libdebian-installer4-dev
 Standards-Version: 3.5.6
 
 Package: partman
 Architecture: any
-Depends: libc-udeb, hw-detect-full, libparted1.6-udeb, partman-partitioning, partman-target
+Depends: libc-udeb, hw-detect-full, libparted1.6-udeb, partman-partitioning, partman-target, libdebian-installer4-udeb
 Provides: made-filesystems, mounted-partitions, partitioned-harddrives
 XB-Installer-Menu-Item: 48
 Description: Partition the storage devices (partman)
