@@ -45,8 +45,10 @@ install: build
 	dh_install partman bin
 	dh_install parted_devices bin
 	dh_install parted_server bin
+	dh_install map_devfs bin
 	strip --remove-section=.note --remove-section=.comment `pwd`/debian/${PACKAGE}/bin/parted_server
 	strip --remove-section=.note --remove-section=.comment `pwd`/debian/${PACKAGE}/bin/parted_devices
+	strip --remove-section=.note --remove-section=.comment `pwd`/debian/${PACKAGE}/bin/map_devfs
 	rm -rf `find debian/$(PACKAGE) -name CVS`
 
 binary-arch: build install
